--- a/Programmers/Hash/Hash_lv1.ipynb
+++ b/Programmers/Hash/Hash_lv1.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cd37512e",
+   "id": "cfbf303c",
    "metadata": {},
    "source": [
-    "# 1. 완주하지 못한 선수"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a45bccef",
-   "metadata": {},
-   "source": [
-    "### 문제 설명\n",
-    "수많은 마라톤 선수들이 마라톤에 참여하였습니다. 단 한 명의 선수를 제외하고는 모든 선수가 마라톤을 완주하였습니다.\n",
-    "\n",
-    "마라톤에 참여한 선수들의 이름이 담긴 배열 participant와 완주한 선수들의 이름이 담긴 배열 completion이 주어질 때, 완주하지 못한 선수의 이름을 return 하도록 solution 함수를 작성해주세요.\n",
-    "\n",
-    "### 제한사항\n",
-    " - 마라톤 경기에 참여한 선수의 수는 1명 이상 100,000명 이하입니다.\n",
-    " - completion의 길이는 participant의 길이보다 1 작습니다.\n",
-    " - 참가자의 이름은 1개 이상 20개 이하의 알파벳 소문자로 이루어져 있습니다.\n",
-    " - 참가자 중에는 동명이인이 있을 수 있습니다."
+    "# 완주하지 못한 선수"
    ]
   },
   {
@@ -31,6 +14,14 @@
    "metadata": {},
    "source": [
     "# My solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95f15058",
+   "metadata": {},
+   "source": [
+    " - 효율성 테스트 실패"
    ]
   },
   {
@@ -131,11 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "aca7db1b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 라이브러리 활용\n",
+    "\n",
     "import collections\n",
     "\n",
     "def solution(participant, completion):\n",
@@ -145,11 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "199a7548",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# hash값 활용\n",
+    "\n",
     "def solution(participant, completion):\n",
     "    answer = ''\n",
     "    temp = 0\n",
@@ -166,7 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "id": "1cdd9f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# zip 활용\n",
+    "\n",
+    "def solution(participant, completion):\n",
+    "    participant.sort()\n",
+    "    completion.sort()\n",
+    "    for p, c in zip(participant, completion):\n",
+    "        if p != c:\n",
+    "            return p\n",
+    "    return participant[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "68fc8d39",
    "metadata": {
     "scrolled": false
@@ -178,7 +191,7 @@
        "'leo'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "a3942485",
    "metadata": {},
    "outputs": [
@@ -201,7 +214,7 @@
        "'vinko'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,10 +227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "1dd199db",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -226,7 +239,7 @@
        "'mislav'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,6 +249,201 @@
     "completion = [\"stanko\", \"ana\", \"mislav\"]\n",
     "solution(participant, completion)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecce4e0d",
+   "metadata": {},
+   "source": [
+    "# Doodle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2900b7a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(hash('ana'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "747c2aeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "participant.sort()\n",
+    "completion.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "465cc6ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<zip at 0x7f8c7658d700>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip(participant, completion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f11a5a23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ana', 'ana'), ('mislav', 'mislav'), ('mislav', 'stanko')]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(participant, completion))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "23efa124",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ana': 'ana', 'mislav': 'stanko'}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(zip(participant, completion))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "90939474",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'marina': 1, 'josipa': 1, 'nikola': 1, 'vinko': 1, 'filipa': 1})"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collections.Counter(participant)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b1647d88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'josipa': 1, 'filipa': 1, 'marina': 1, 'nikola': 1})"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collections.Counter(completion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "fb483554",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'vinko': 1})"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collections.Counter(participant) - collections.Counter(completion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "7f9cf945",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'marina': 2, 'josipa': 2, 'nikola': 2, 'vinko': 1, 'filipa': 2})"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collections.Counter(participant) + collections.Counter(completion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "459df63b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
