--- a/Programmers/Hash/Hash_lv2.ipynb
+++ b/Programmers/Hash/Hash_lv2.ipynb
@@ -9,47 +9,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "55ac1f1c",
-   "metadata": {},
-   "source": [
-    "### 문제 설명\n",
-    "전화번호부에 적힌 전화번호 중, 한 번호가 다른 번호의 접두어인 경우가 있는지 확인하려 합니다.\n",
-    "전화번호가 다음과 같을 경우, 구조대 전화번호는 영석이의 전화번호의 접두사입니다.\n",
-    "\n",
-    " - 구조대 : 119\n",
-    " - 박준영 : 97 674 223\n",
-    " - 지영석 : 11 9552 4421\n",
-    "\n",
-    "전화번호부에 적힌 전화번호를 담은 배열 phone_book 이 solution 함수의 매개변수로 주어질 때, 어떤 번호가 다른 번호의 접두어인 경우가 있으면 false를 그렇지 않으면 true를 return 하도록 solution 함수를 작성해주세요.\n",
-    "\n",
-    "### 제한 사항\n",
-    " - phone_book의 길이는 1 이상 1,000,000 이하입니다.\n",
-    "     - 각 전화번호의 길이는 1 이상 20 이하입니다.\n",
-    "     - 같은 전화번호가 중복해서 들어있지 않습니다."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "id": "94cef6cc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 속도\n",
+    "\n",
     "def solution(phone_book):\n",
-    "    answer = True\n",
     "    dic = {}\n",
     "    for pNumber in phone_book:\n",
-    "        dic[pNumber] = 1 \n",
+    "        dic[pNumber] = 1\n",
     "    for pNumber in phone_book:\n",
     "        temp=\"\"\n",
     "        for num in pNumber:\n",
-    "            temp +=num\n",
-    "            print(temp)\n",
-    "            if temp in dic and temp!=pNumber:\n",
-    "                answer = False\n",
-    "    print(dic)\n",
-    "    return answer"
+    "            temp += num\n",
+    "#             print(temp)\n",
+    "            if temp in dic and temp != pNumber:\n",
+    "#                 print(dic)\n",
+    "                return False\n",
+    "    return True"
    ]
   },
   {
@@ -59,9 +39,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(phoneBook):\n",
-    "    phoneBook = sorted(phoneBook)\n",
-    "    for p1, p2 in zip(phoneBook, phoneBook[1:]):\n",
+    "# 메모리\n",
+    "\n",
+    "def solution(phone_book):\n",
+    "    phone_book = sorted(phone_book)\n",
+    "    for p1, p2 in zip(phone_book, phone_book[1:]):\n",
     "        if p2.startswith(p1):\n",
     "            return False\n",
     "    return True"
@@ -69,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "80c273c3",
    "metadata": {},
    "outputs": [
@@ -91,13 +73,6 @@
       "1\n",
       "11\n",
       "119\n",
-      "1195\n",
-      "11955\n",
-      "119552\n",
-      "1195524\n",
-      "11955244\n",
-      "119552442\n",
-      "1195524421\n",
       "{'119': 1, '97674223': 1, '1195524421': 1}\n"
      ]
     },
@@ -107,7 +82,7 @@
        "False"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "id": "9912116e",
    "metadata": {},
    "outputs": [
@@ -127,7 +102,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
+      "12\n",
+      "123\n",
+      "4\n",
+      "45\n",
       "456\n",
+      "7\n",
+      "78\n",
       "789\n"
      ]
     },
@@ -137,7 +119,7 @@
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "id": "b193b176",
    "metadata": {
     "scrolled": true
@@ -159,7 +141,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123\n"
+      "1\n",
+      "12\n",
+      "1\n",
+      "12\n",
+      "{'12': 1, '123': 1, '1235': 1, '567': 1, '88': 1}\n"
      ]
     },
     {
@@ -168,7 +154,7 @@
        "False"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,11 +166,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6ee81c0f",
+   "execution_count": 15,
+   "id": "fd9d81e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p1: 12\n",
+      "p2: 123\n",
+      "True\n",
+      "\n",
+      "\n",
+      "p1: 123\n",
+      "p2: 1235\n",
+      "True\n",
+      "\n",
+      "\n",
+      "p1: 1235\n",
+      "p2: 567\n",
+      "False\n",
+      "\n",
+      "\n",
+      "p1: 567\n",
+      "p2: 88\n",
+      "False\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p1, p2 in zip(phone_book, phone_book[1:]):\n",
+    "    print('p1:', p1)\n",
+    "    print('p2:', p2)\n",
+    "    print(p2.startswith(p1))\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0b5e1703",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'12': '123', '123': '1235', '1235': '567', '567': '88'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(zip(phone_book, phone_book[1:]))"
+   ]
   }
  ],
  "metadata": {
