--- a/Programmers/스택_큐/기능개발.ipynb
+++ b/Programmers/스택_큐/기능개발.ipynb
@@ -112,26 +112,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "22532e71",
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(progresses, speeds):\n",
     "    Q=[]\n",
-    "    for p, s in zip(progresses, speeds):\n",
-    "        if len(Q)==0 or Q[-1][0]<-((p-100)//s):\n",
-    "            Q.append([-((p-100)//s),1])\n",
+    "    for p, s in zip(progresses, speeds): # 하나씩 꺼냄\n",
+    "        if len(Q)==0 or Q[-1][0]<-((p-100)//s): # 첫번째 or 다음작업이 전작업보다 늦게 끝날 경우\n",
+    "            Q.append([-((p-100)//s),1]) # [음수(음수)로 올림처리(math.ceil) 안하도록, 작업 끝나면 +1]\n",
     "            print(Q)\n",
-    "        else:\n",
-    "            Q[-1][1]+=1\n",
+    "        else: # 다음작업이 전작업보다 일찍 끝날 경우\n",
+    "            Q[-1][1]+=1 # 작업량만 추가\n",
+    "            print(Q)\n",
     "    print(\"final\", Q)\n",
     "    return [q[1] for q in Q]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "efd89b58",
    "metadata": {},
    "outputs": [],
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "4e64f39a",
    "metadata": {},
    "outputs": [
@@ -151,6 +152,7 @@
      "output_type": "stream",
      "text": [
       "[[7, 1]]\n",
+      "[[7, 2]]\n",
       "[[7, 2], [9, 1]]\n",
       "final [[7, 2], [9, 1]]\n"
      ]
@@ -161,7 +163,7 @@
        "[2, 1]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "e4b063e4",
    "metadata": {},
    "outputs": [],
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "9d61c57f",
    "metadata": {},
    "outputs": [
@@ -193,7 +195,10 @@
      "text": [
       "[[5, 1]]\n",
       "[[5, 1], [10, 1]]\n",
+      "[[5, 1], [10, 2]]\n",
+      "[[5, 1], [10, 3]]\n",
       "[[5, 1], [10, 3], [20, 1]]\n",
+      "[[5, 1], [10, 3], [20, 2]]\n",
       "final [[5, 1], [10, 3], [20, 2]]\n"
      ]
     },
@@ -203,7 +208,7 @@
        "[1, 3, 2]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
